refactor: seralize new data to v0 format
